--- a/carp-core/carp-service/pom.xml
+++ b/carp-core/carp-service/pom.xml
@@ -24,7 +24,7 @@
         </dependency>
         <!-- Bean Validation API support -->
         <dependency>
-            <groupId>org.hibernate</groupId>
+            <groupId>org.hibernate.validator</groupId>
             <artifactId>hibernate-validator</artifactId>
         </dependency>
         <dependency>
