--- a/carp-admin/src/main/resources/config/application.yml
+++ b/carp-admin/src/main/resources/config/application.yml
@@ -11,7 +11,7 @@ spring:
         # 使用druid数据源
         type: com.alibaba.druid.pool.DruidDataSource
         driver-class-name: com.mysql.jdbc.Driver
-        filters: stat,wall,log4j
+        filters: stat,wall,slf4j
         maxActive: 20
         initialSize: 1
         maxWait: 60000
