fix Deprecated methods

--- a/carp-admin/src/main/resources/config/application.yml
+++ b/carp-admin/src/main/resources/config/application.yml
@@ -58,9 +58,9 @@ carp:
   #默认页面的title
     default-title: "Carp Demo"
     #项目版本号
-    version:  "V0.1.0"
+    version:  "V0.3.0"
     #版本状态
-    version-status: "RC"
+    version-status: "SNAPSHOT"
     #项目名称,各种地方用到
     project-name: "Carp"
     #登录页面的字
