--- a/carp-admin/pom.xml
+++ b/carp-admin/pom.xml
@@ -63,7 +63,7 @@
         <dependency>
             <groupId>org.webjars</groupId>
             <artifactId>webjars-locator</artifactId>
-            <version>0.30</version>
+            <version>0.34</version>
         </dependency>
         <dependency>
             <groupId>org.webjars</groupId>
@@ -117,13 +117,14 @@
         <dependency>
             <groupId>org.webjars.npm</groupId>
             <artifactId>axios</artifactId>
-            <version>0.16.1</version>
+            <version>0.18.0</version>
         </dependency>
         <!-- element-ui -->
         <dependency>
             <groupId>org.webjars.npm</groupId>
             <artifactId>element-ui</artifactId>
             <version>1.4.7</version>
+            <!--<version>2.3.7</version>-->
         </dependency>
  <!--       <dependency>
             <groupId>org.webjars.bower</groupId>
