--- a/carp-admin/src/main/resources/config/carp.properties
+++ b/carp-admin/src/main/resources/config/carp.properties
@@ -1,5 +1,5 @@
 #不需要权限认证的url
-carp.security.publicUrlPattern = /403.*|/forbidden|/public/.*|/login.*|/logout.*|/webjars/.*|/huiadmin/.*|/css/.*|/js/.*|/druid/.*
+carp.security.publicUrlPattern = /403.*|/forbidden|/public/.*|/login.*|/logout.*|/webjars/.*|/huiadmin/.*|/css/.*|/js/.*|/druid/.*|/favicon.ico
 
 #需要登录才能访问的url
 carp.security.authenticatedUrlPattern = /|/index.*|/home.*|/dashboard.*|/welcome.*
