--- a/carp-commerce/pom.xml
+++ b/carp-commerce/pom.xml
@@ -27,7 +27,7 @@
             <groupId>org.lotus.carp</groupId>
             <artifactId>carp-base</artifactId>
             <version>${project.version}</version>
-            <scope>compile</scope>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 </project>
