--- a/carp-admin/pom.xml
+++ b/carp-admin/pom.xml
@@ -38,14 +38,10 @@
         </dependency>
         <dependency>
             <groupId>org.lotus.carp</groupId>
-            <artifactId>carp-service</artifactId>
+            <artifactId>carp-service-admin</artifactId>
             <version>${project.version}</version>
         </dependency>
-        <dependency>
-            <groupId>org.lotus.carp</groupId>
-            <artifactId>carp-service-impl</artifactId>
-            <version>${project.version}</version>
-        </dependency>
+
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
