--- a/carp-core/carp-service-impl/pom.xml
+++ b/carp-core/carp-service-impl/pom.xml
@@ -22,6 +22,11 @@
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-core</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
             <groupId>org.lotus.carp</groupId>
             <artifactId>carp-service</artifactId>
             <version>${project.version}</version>
