add api modules

--- a/carp-api/carp-api-config/pom.xml
+++ b/carp-api/carp-api-config/pom.xml
@@ -12,5 +12,29 @@
     <artifactId>carp-api-config</artifactId>
 
     <name>carp-api-config</name>
-
+    <properties>
+        <swagger.version>2.9.2</swagger.version>
+    </properties>
+    <dependencies>
+        <dependency>
+            <groupId>org.lotus.carp</groupId>
+            <artifactId>carp-base</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.lotus.carp</groupId>
+            <artifactId>carp-service-impl</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger2</artifactId>
+            <version>${swagger.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger-ui</artifactId>
+            <version>${swagger.version}</version>
+        </dependency>
+    </dependencies>
 </project>
