--- a/carp-api/carp-api-front/pom.xml
+++ b/carp-api/carp-api-front/pom.xml
@@ -12,5 +12,15 @@
     <artifactId>carp-api-front</artifactId>
 
     <name>carp-api-front</name>
-
+    <dependencies>
+        <dependency>
+            <groupId>org.lotus.carp</groupId>
+            <artifactId>carp-api-config</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+    </dependencies>
 </project>
