--- a/carp-admin/pom.xml
+++ b/carp-admin/pom.xml
@@ -106,10 +106,15 @@
             <version>2.3.8</version>
         </dependency>
         <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>vue</artifactId>
+            <version>2.5.16</version>
+        </dependency>
+<!--        <dependency>
             <groupId>org.webjars.npm</groupId>
             <artifactId>vue</artifactId>
             <version>2.4.2</version>
-        </dependency>
+        </dependency>-->
         <dependency>
             <groupId>org.webjars.npm</groupId>
             <artifactId>axios</artifactId>
