--- a/carp-admin/src/main/resources/config/application.yml
+++ b/carp-admin/src/main/resources/config/application.yml
@@ -1,8 +1,8 @@
 #common基础配置
 server:
     port: 8081
-    servlet:
-      context-path: /admin
+    #servlet:
+      #context-path: /admin
 spring:
     datasource:
         name: adminPrdEnv
