add spring boot actuator

--- a/carp-admin/src/main/resources/config/application.yml
+++ b/carp-admin/src/main/resources/config/application.yml
@@ -55,6 +55,12 @@ spring:
   #flyway配置
     flyway:
       enabled: false
+#metrics
+management:
+  endpoints:
+    web:
+      exposure:
+        include:  info,health,metrics
 #carp配置
 carp:
   config:
