--- a/carp-admin/src/main/resources/config/carp.properties
+++ b/carp-admin/src/main/resources/config/carp.properties
@@ -2,7 +2,7 @@
 carp.security.publicUrlPattern = /403.*|/forbidden|/public/.*|/login.*|/logout.*|/webjars/.*|/huiadmin/.*|/css/.*|/js/.*|/druid/.*|/favicon.ico
 
 #需要登录才能访问的url
-carp.security.authenticatedUrlPattern = /|/index.*|/home.*|/dashboard.*|/welcome.*
+carp.security.authenticatedUrlPattern = /|/index.*|/home.*|/dashboard.*|/welcome.*|/actuator.*
 
 #需要自定义角色保护的url
 carp.security.securityUrlPattern = /.*
