--- a/carp-api/carp-api-config/pom.xml
+++ b/carp-api/carp-api-config/pom.xml
@@ -52,6 +52,14 @@
             <scope>runtime</scope>
         </dependency>
         -->
+        
+        <!-- https://github.com/Wechat-Group/weixin-java-tools -->
+        <dependency>
+            <groupId>com.github.binarywang</groupId>
+            <artifactId>weixin-java-mp</artifactId>
+            <version>3.1.0</version>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
