--- a/carp-api/carp-api-config/src/main/resources/config/application.yml
+++ b/carp-api/carp-api-config/src/main/resources/config/application.yml
@@ -72,4 +72,6 @@ wechat:
   appid: wxdbe8e668a9deb51d
   appSecret:  d1e04e8be1ffa0a8f485faed73669192
   #oauth2成功后的回调url
-  oauth2RedirectUri: http://192.168.2.10:8081/api/wx/oauth2/callback
+  oauth2RedirectDomain: 192.168.2.10
+  oauth2RedirectSchema: http
+  oauth2RedirectUri: ${wechat.oauth2RedirectSchema}://${wechat.oauth2RedirectDomain}:${server:port}/api/wx/oauth2/oauth2RedirectUri
