--- a/carp-api/carp-api-config/src/main/resources/config/application.yml
+++ b/carp-api/carp-api-config/src/main/resources/config/application.yml
@@ -44,6 +44,10 @@ spring:
   #flyway配置
     flyway:
       enabled: false
+carp:
+  api:
+  #是否允许跨域
+    enableCrossDomain: false
 # JWT
 jwt:
   header: Authorization
