--- a/carp-admin/pom.xml
+++ b/carp-admin/pom.xml
@@ -125,6 +125,31 @@
             <artifactId>element-ui</artifactId>
             <version>1.4.7</version>
         </dependency>
+        <!-- font-awesome -->
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>font-awesome</artifactId>
+            <version>4.7.0</version>
+            <!--<version>5.2.0</version>-->
+        </dependency>
+        <!--ionicons-->
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>ionicons</artifactId>
+            <version>2.0.1</version>
+        </dependency>
+        <!-- html5shiv -->
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>html5shiv</artifactId>
+            <version>3.7.3</version>
+        </dependency>
+        <!--respond-->
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>respond</artifactId>
+            <version>1.4.2</version>
+        </dependency>
  <!--       <dependency>
             <groupId>org.webjars.bower</groupId>
             <artifactId>adminlte</artifactId>
