--- a/carp-base/pom.xml
+++ b/carp-base/pom.xml
@@ -14,7 +14,7 @@
     <url>https://github.com/flian/carp</url>
 
     <properties>
-
+        <itext.pdf.version>5.5.13</itext.pdf.version>
     </properties>
 
     <dependencies>
@@ -51,6 +51,12 @@
         <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-core</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.itextpdf</groupId>
+            <artifactId>itextpdf</artifactId>
+            <version>${itext.pdf.version}</version>
             <scope>provided</scope>
         </dependency>
     </dependencies>
