add webssh 1.26-SNAPSHOT

--- a/carp-admin/src/main/resources/config/application.yml
+++ b/carp-admin/src/main/resources/config/application.yml
@@ -66,6 +66,9 @@ management:
     web:
       exposure:
         include:  info,health,metrics
+#webssh config
+webssh:
+  allowedUsers: root:CarpAdmin@123!:%
 #carp配置
 carp:
   config:
