--- a/carp-admin/pom.xml
+++ b/carp-admin/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>carp-parent</artifactId>
         <groupId>org.lotus.carp</groupId>
@@ -54,6 +55,11 @@
         <dependency>
             <groupId>com.github.penggle</groupId>
             <artifactId>kaptcha</artifactId>
+        </dependency>
+        <!-- webssh include https://github.com/flian/webssh/tree/dev_1.26-->
+        <dependency>
+            <groupId>org.lotus.carp.webssh</groupId>
+            <artifactId>webssh</artifactId>
         </dependency>
         <!--webjar-->
         <!--
@@ -114,11 +120,11 @@
             <artifactId>vue</artifactId>
             <version>2.5.16</version>
         </dependency>
-<!--        <dependency>
-            <groupId>org.webjars.npm</groupId>
-            <artifactId>vue</artifactId>
-            <version>2.4.2</version>
-        </dependency>-->
+        <!--        <dependency>
+                    <groupId>org.webjars.npm</groupId>
+                    <artifactId>vue</artifactId>
+                    <version>2.4.2</version>
+                </dependency>-->
         <dependency>
             <groupId>org.webjars.npm</groupId>
             <artifactId>axios</artifactId>
@@ -156,11 +162,11 @@
             <!--<version>1.4.7</version>-->
             <version>2.3.7</version>
         </dependency>
- <!--       <dependency>
-            <groupId>org.webjars.bower</groupId>
-            <artifactId>adminlte</artifactId>
-            <version>2.3.11</version>
-        </dependency>-->
+        <!--       <dependency>
+                   <groupId>org.webjars.bower</groupId>
+                   <artifactId>adminlte</artifactId>
+                   <version>2.3.11</version>
+               </dependency>-->
     </dependencies>
     <!--打成标准的jar包
       <build>
