--- a/pom.xml
+++ b/pom.xml
@@ -179,7 +179,12 @@
             <!-- webssh https://github.com/flian/webssh/tree/dev_1.26 -->
             <dependency>
                 <groupId>org.lotus.carp.webssh</groupId>
-                <artifactId>webssh</artifactId>
+                <artifactId>webssh-core</artifactId>
+                <version>${webssh.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.lotus.carp.webssh</groupId>
+                <artifactId>vue2-web</artifactId>
                 <version>${webssh.version}</version>
             </dependency>
         </dependencies>
